k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "ebensch-portfolio"
  namespace: ebensch-portfolio
  labels:
    app: "ebensch-portfolio"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "ebensch-portfolio"
  template:
    metadata:
      labels:
        app: "ebensch-portfolio"
    spec:
      containers:
        - image: "ghcr.io/ebensch/portfolio-oc:30e5b251631e76e5fa75b0c5c5876937058957ee"
          name: "ebensch-portfolio"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
