k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ebensch-portfolio
  labels:
    app: "ebensch-portfolio"
  name: "ebensch-portfolio-service"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: "ebensch-portfolio"
